--- a/css/styles.css
+++ b/css/styles.css
@@ -9,16 +9,33 @@ padding: 0px;
 
 body
 {
-font-family: 'verdana', sans-serif;
-
+    font-family: 'verdana', sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #efefef;
+    font-size: 16px;
+    color: #777;
+    font-family: sans-serif;
+    font-weight: 300;
 }
 
-h1,h2,h3,h4,h4,h6
+h1
+{
+    margin: 0 0 20px 0;
+    font-weight: 300;
+    font-size: 28px;
+}
+
+
+h1
 {
 font-family: 'Montserrat', sans-serif;
-font-weight: 100;
+font-weight: 100px;
 color:
 }
+
+
+
 
 
 .heading
@@ -50,6 +67,7 @@ color:
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
 
 }
 
@@ -120,26 +138,21 @@ justify-content: center;
   border-radius: 40px;
   padding: 14px 28px;
   background-color: #419D78;
-  color: white;
-font-size: 16px;
-cursor: pointer;
-display: inline-block;
-}
-
-.btn:hover {background: none;}
-
-.sign {color: grey;}
-
-.sign-type
-{
-
-  border: none;
-  background: none;
-  outline: none;
-  float: left;
-  color: white;
   font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
 }
+
+.btn:hover {background-color:rgba(65,157,120,0.9)}
+
+.sign
+{
+  margin: 0px;
+  color: white;
+  justify-content: center;
+}
+
+
 
 .Account
 {
@@ -291,19 +304,177 @@ display: inline;
 
 .main
 {
-
-  margin-top: auto;
+  margin: 0px;
   padding: 0px;
-
+  position: absolute;
+  top: 20%;
+  right: 36%;
+  width: 520px;
+   padding-top: 700px;
+   border: 5px solid white;
+   background-color: #419D78;
+   border-radius: 40px;
+   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
 
 .heading
 {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
+  position: absolute;
+  top: 10%;
+  color: white;
+}
+
+.rank
+{
+  margin: 0px;
+  padding: 0px;
+  position: absolute;
+  top: 20%;
+  right: 80%;
+  color: white;
+  font-size: 1.8em;
+  line-height: 100px;
+}
+
+
+#login-box
+{
+    position: relative;
+    margin: 12% auto;
+    height: 400px;
+    width: 600px;
+    background: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+}
+
+.left-box
+{
     position: absolute;
-    top: 20%;
-    right: 42%;
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
+    padding: 40px;
+    width: 300px;
+    height: 400px;
+}
+
+h1
+{
+    margin: 0 0 20px 0;
+    font-weight: 300;
+    font-size: 28px;
+}
+
+input[type="text"],
+input[type="password"]
+{
+    display: block;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+    padding: 4px;
+    width: 220px;
+    height: 32px;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #aaa;
+    font-family: sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    transition: 0.2s ease;
+}
+
+input[type="submit"]
+{
+    margin-bottom: 28px;
+    width: 120px;
+    height: 32px;
+    background: #419D78;
+    border: none;
+    border-radius: 2px;
+    color: #fff;
+    font-family: sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    transition: 0.2s ease;
+    cursor: pointer;
+
+}
+
+input[type="submit"]:hover,
+input[type="submit"]:focus
+{
+    background: #41B778;
+    transition: 0.2s ease;
+}
+
+.right-box
+{
+    position: absolute;
+    top: 0;
+    right: 0;
+    box-sizing: border-box;
+    padding: 40px;
+    width: 300px;
+    height: 400px;
+    background-image: url(image1.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.or
+{
+    position: absolute;
+    top: 180px;
+    left: 280px;
+    width: 40px;
+    height: 40px;
+    background: #efefef;
+    border-radius: 50%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+    line-height: 40px;
+    text-align: center;
+}
+
+.right-box .signinwith
+{
+    display: block;
+    margin-bottom: 40px;
+    font-size: 28px;
+    color: #419D78;
+    text-align: center;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
 
 
+button.social
+{
+    margin-bottom: 20px;
+    width: 220px;
+    height: 36px;
+    border: none;
+    border-radius: 2px;
+    color: #fff;
+    font-family: sans-serif;
+    font-weight: 500;
+    transition: 0.2s ease;
+    cursor: pointer;
+}
+
+.facebook
+{
+    background: #32508e;
+}
+.twitter
+{
+    background: #55acee;
+}
+.instagram
+{
+    background: #8C3EAC;
 }
